unpackaged/main/default/objects/User/fields/Account_Claim_Method__c.field-meta.xml
<CustomField>
    <fullName>Account_Claim_Method__c</fullName>
    <defaultValue>&quot;Disabled&quot;</defaultValue>
    <label>Account Claim Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Any - Unowned Only</fullName>
            </value>
            <value>
                <fullName>Any - Unowned or From Others</fullName>
            </value>
            <value>
                <fullName>Request - Unowned Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>