unpackaged/main/default/objects/User/fields/Account_Max_Hold_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Hold_Time_Days__c</fullName>
    <inlineHelpText>The maximum number of days you may own an account before it is automatically moved back to the Account Pool except if there is at least one open opportunity.</inlineHelpText>
    <label>Account - Max Hold Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>