unpackaged/main/default/objects/User/fields/Account_Max_Num_Holds__c.field-meta.xml
<CustomField>
    <fullName>Account_Max_Num_Holds__c</fullName>
    <inlineHelpText>The maximum number of ROE account holds this user may have active at any time</inlineHelpText>
    <label>Account - Max Number of Holds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>