unpackaged/main/default/objects/User/fields/Account_Min_Hold_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Min_Hold_Time_Days__c</fullName>
    <inlineHelpText>The minimum number of days you must own an account before you may deposit it back into the Account Pool</inlineHelpText>
    <label>Account - Min Hold Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>