unpackaged/main/default/objects/User/fields/Account_Min_Time_Before_Reclaim_Days__c.field-meta.xml
<CustomField>
    <fullName>Account_Min_Time_Before_Reclaim_Days__c</fullName>
    <inlineHelpText>The minimum number of days that you must wait since you last owned an account before you may re-claim it from the Account Pool.</inlineHelpText>
    <label>Account - Min Time Before Reclaim (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>