unpackaged/main/default/objects/User/fields/Account_Team_Primary_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Primary_Role__c</fullName>
    <label>Account Team: Primary Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Team_Primary_Roles</valueSetName>
    </valueSet>
</CustomField>