unpackaged/main/default/objects/User/fields/breadwinner_ns__NetSuite_Employee_NS_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Employee_NS_Internal_ID__c</fullName>
    <description>Stores the Associated NetSuite Employee Internal Id</description>
    <inlineHelpText>Associated NetSuite Employee - NS Internal ID</inlineHelpText>
    <label>NetSuite Employee (NS Internal ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>