unpackaged/main/default/objects/User/fields/breadwinner_ns__NetSuite_Employee_SF_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Employee_SF_Record_ID__c</fullName>
    <description>Stored the Associated NetSuite Employee - SF Record ID</description>
    <inlineHelpText>Associated NetSuite Employee - SF Record ID</inlineHelpText>
    <label>NetSuite Employee (SF Record ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>