unpackaged/main/default/objects/User/fields/Can_make_RevOps_agreements__c.field-meta.xml
<CustomField>
    <fullName>Can_make_RevOps_agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Make RevOps Agreements?</label>
    <type>Checkbox</type>
</CustomField>