unpackaged/main/default/objects/User/fields/Can_Qualify_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Can_Qualify_Opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Qualify Opportunities?</label>
    <type>Checkbox</type>
</CustomField>