unpackaged/main/default/objects/User/fields/Check_Installed_Package_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Check_Installed_Package_Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Installed Package Licenses</label>
    <type>Checkbox</type>
</CustomField>