unpackaged/main/default/objects/User/fields/CP_Concierge_in_Instant_Booker__c.field-meta.xml
<CustomField>
    <fullName>CP_Concierge_in_Instant_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP: Concierge in Instant Booker</label>
    <type>Checkbox</type>
</CustomField>