unpackaged/main/default/objects/User/fields/CP_Google_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>CP_Google_Integration_Status__c</fullName>
    <defaultValue>&quot;Disconnected&quot;</defaultValue>
    <label>CP: Google Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>