unpackaged/main/default/objects/User/fields/CP_Is_Default_Booker__c.field-meta.xml
<CustomField>
    <fullName>CP_Is_Default_Booker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CP: Is Default Booker?</label>
    <type>Checkbox</type>
</CustomField>