unpackaged/main/default/objects/User/fields/CP_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CP_Licenses__c</fullName>
    <label>CP: Licenses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_License_Types</valueSetName>
    </valueSet>
</CustomField>