unpackaged/main/default/objects/User/fields/CP_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Link_Name__c</fullName>
    <label>CP: Link Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>