unpackaged/main/default/objects/User/fields/CP_Standard_Queues__c.field-meta.xml
<CustomField>
    <fullName>CP_Standard_Queues__c</fullName>
    <label>CP: Standard Queues</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Queues</valueSetName>
    </valueSet>
</CustomField>