unpackaged/main/default/objects/User/fields/CP_User_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_User_ID__c</fullName>
    <label>CP: User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>