unpackaged/main/default/objects/User/fields/Current_Week__c.field-meta.xml
<CustomField>
    <fullName>Current_Week__c</fullName>
    <formula>CASE(MOD(TODAY() - DATE(1900, 1, 6), 7),
0, TODAY() + 0,
1, TODAY() + 6,
2, TODAY() + 5,
3, TODAY() + 4,
4, TODAY() + 3,
5, TODAY() + 2,
6, TODAY() + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Week</label>
    <type>Date</type>
</CustomField>