unpackaged/main/default/objects/User/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>Employee ID (Payroll)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>