unpackaged/main/default/objects/User/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <label>Employee Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>