unpackaged/main/default/objects/User/fields/Geo_Countries_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Geo_Countries_Allowed__c</fullName>
    <label>Geo: Countries (Allowed)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>