unpackaged/main/default/objects/User/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Goal_Type</valueSetName>
    </valueSet>
</CustomField>