unpackaged/main/default/objects/User/fields/Gong_Activity_Capture_Level__c.field-meta.xml
<CustomField>
    <fullName>Gong_Activity_Capture_Level__c</fullName>
    <label>Gong: Activity Capture Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gong_Activity_Capture_Level</valueSetName>
    </valueSet>
</CustomField>