unpackaged/main/default/objects/User/fields/Is_Vendor_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Vendor_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vendor User?</label>
    <type>Checkbox</type>
</CustomField>