unpackaged/main/default/objects/User/fields/Manage_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Manage_Bookings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage Bookings?</label>
    <type>Checkbox</type>
</CustomField>