unpackaged/main/default/objects/User/fields/Manager_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Full_Name__c</fullName>
    <formula>Manager.FirstName &amp; &quot; &quot; &amp; Manager.LastName</formula>
    <label>Manager Full Name</label>
    <type>Text</type>
</CustomField>