unpackaged/main/default/objects/User/fields/Manager_s_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Manager_Name__c</fullName>
    <formula>Manager.Manager_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&#39;s Manager Name</label>
    <type>Text</type>
</CustomField>