unpackaged/main/default/objects/User/fields/Managers_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Managers_Manager_ID__c</fullName>
    <formula>Manager.Manager_ID_case_safe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager&#39;s Manager ID</label>
    <type>Text</type>
</CustomField>