unpackaged/main/default/objects/User/fields/Mapped_BDR__c.field-meta.xml
<CustomField>
    <fullName>Mapped_BDR__c</fullName>
    <label>Mapped BDR</label>
    <relationshipName>User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>