unpackaged/main/default/objects/User/fields/Mapped_Renewal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Renewal_Manager__c</fullName>
    <label>Mapped Renewal Manager</label>
    <relationshipName>Renewal_Manager</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>