unpackaged/main/default/objects/User/fields/Mapped_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Sales_Engineer__c</fullName>
    <label>Mapped Sales Engineer</label>
    <relationshipName>Mapped_Sales_Engineer</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>