unpackaged/main/default/objects/User/fields/Months_at_Retool__c.field-meta.xml
<CustomField>
    <fullName>Months_at_Retool__c</fullName>
    <formula>IF(
 ISBLANK(End_Date__c),
 ((TODAY()-Start_Date__c)) / 30,
 ((End_Date__c-Start_Date__c)) / 30
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of months since the user&#39;s start date</inlineHelpText>
    <label>Months at Retool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>