unpackaged/main/default/objects/User/fields/New_Annualized_Revenue_Goal_This_Qtr__c.field-meta.xml
<CustomField>
    <fullName>New_Annualized_Revenue_Goal_This_Qtr__c</fullName>
    <label>New Annualized Revenue Goal (This Qtr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>