unpackaged/main/default/objects/User/fields/Num_of_Goals__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Goals__c</fullName>
    <label># of Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>