unpackaged/main/default/objects/User/fields/Personal_Booking_Link__c.field-meta.xml
<CustomField>
    <fullName>Personal_Booking_Link__c</fullName>
    <label>Personal Booking Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>