unpackaged/main/default/objects/User/fields/ProvenWorks_License_Status__c.field-meta.xml
<CustomField>
    <fullName>ProvenWorks_License_Status__c</fullName>
    <defaultValue>&quot;Not Licensed&quot;</defaultValue>
    <label>ProvenWorks: License Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProvenWorks_License_Status</valueSetName>
    </valueSet>
</CustomField>