unpackaged/main/default/objects/User/fields/Provisioning_TS__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_TS__c</fullName>
    <label>Provisioning TS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>