unpackaged/main/default/objects/User/fields/pw_ccpro__QuickCompleteCountry__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__QuickCompleteCountry__c</fullName>
    <label>QuickComplete Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>