unpackaged/main/default/objects/User/fields/Rippling_ID__c.field-meta.xml
<CustomField>
    <fullName>Rippling_ID__c</fullName>
    <externalId>true</externalId>
    <label>Rippling ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>