unpackaged/main/default/objects/User/fields/Rippling_Manager_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Manager_Mismatch__c</fullName>
    <formula>Rippling_Manager_ID__c != Manager.Rippling_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rippling Manager Mismatch?</label>
    <type>Checkbox</type>
</CustomField>