unpackaged/main/default/objects/User/fields/Rippling_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Manager_Name__c</fullName>
    <label>Rippling Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>