unpackaged/main/default/objects/User/fields/Rippling_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Photo_URL__c</fullName>
    <description>Photo URL from Rippling. Standard profile photo files cannot be mass updated through normal means, so this enables us to update user photos programatically.</description>
    <label>Rippling Photo URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>