unpackaged/main/default/objects/User/fields/Rippling_Title__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Title__c</fullName>
    <label>Rippling Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>