unpackaged/main/default/objects/User/fields/Rippling_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Rippling_Work_Location__c</fullName>
    <label>Rippling Work Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>