unpackaged/main/default/objects/User/fields/Sales_Operations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Operations</label>
    <type>Checkbox</type>
</CustomField>