unpackaged/main/default/objects/User/fields/Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_ID__c</fullName>
    <description>This is the Retooler&#39;s slack member ID (for notifications).</description>
    <inlineHelpText>This is the Retooler&#39;s slack member ID (for notifications).</inlineHelpText>
    <label>Slack Member ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>