unpackaged/main/default/objects/User/fields/Slack_Mention_With_Role_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Slack_Mention_With_Role_Short_Name__c</fullName>
    <formula>IF(IsActive = FALSE,
 FirstName&amp;&quot; &quot;&amp;LastName&amp;&quot; (Inactive User)&quot;,
 IF(
  ISBLANK(Slack_ID__c),
  FirstName&amp;&quot; &quot;&amp;LastName&amp;IF(ISBLANK(User_Role_Short_Name__c),NULL,&quot; (&quot;&amp;User_Role_Short_Name__c&amp;&quot;)&quot;),
  &quot;&lt;@&quot;&amp;Slack_ID__c&amp;&quot;&gt;&quot;&amp;IF(ISBLANK(User_Role_Short_Name__c),NULL,&quot; (&quot;&amp;User_Role_Short_Name__c&amp;&quot;)&quot;)
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Slack Mention: With Role Short Name</label>
    <type>Text</type>
</CustomField>