unpackaged/main/default/objects/User/fields/Slack_Notifications_GTM_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications_GTM_Tickets__c</fullName>
    <defaultValue>&quot;Watched Tickets&quot;</defaultValue>
    <inlineHelpText>Controls Slack notifications related to GTM Tickets</inlineHelpText>
    <label>Slack Notifications: GTM Tickets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Slack_GTM_Ticket_Notifications</valueSetName>
    </valueSet>
</CustomField>