unpackaged/main/default/objects/User/fields/Slack_Notifications_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications_Pipeline__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <inlineHelpText>Controls Slack notifications related to your sales pipeline, deals, etc.</inlineHelpText>
    <label>Slack Notifications: Pipeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Slack_Pipeline_Notifications</valueSetName>
    </valueSet>
</CustomField>