unpackaged/main/default/objects/User/fields/Start_Month_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Start_Month_Current_Role__c</fullName>
    <formula>DATE(YEAR(User_Role_Effective_Date__c),MONTH(User_Role_Effective_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Month (Current Role)</label>
    <type>Date</type>
</CustomField>