unpackaged/main/default/objects/User/fields/Start_Year_All_Roles__c.field-meta.xml
<CustomField>
    <fullName>Start_Year_All_Roles__c</fullName>
    <formula>TEXT(YEAR(Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Year (All Roles)</label>
    <type>Text</type>
</CustomField>