unpackaged/main/default/objects/User/fields/Start_Year_Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Start_Year_Current_Role__c</fullName>
    <formula>TEXT(YEAR(User_Role_Effective_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Year (Current Role)</label>
    <type>Text</type>
</CustomField>