unpackaged/main/default/objects/User/fields/Support_Case_Limit__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Limit__c</fullName>
    <label>Support Case Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>