unpackaged/main/default/objects/User/fields/Team_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Team_Subteam__c</fullName>
    <formula>User_Role_Short_Name__c&amp;&quot;-&quot;&amp;TEXT(Subteam__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team-Subteam</label>
    <type>Text</type>
</CustomField>