unpackaged/main/default/objects/User/fields/Time_Zone_UTC_Offset__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_UTC_Offset__c</fullName>
    <label>Time Zone: UTC Offset</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>