unpackaged/main/default/objects/User/fields/User_Extension_ID__c.field-meta.xml
<CustomField>
    <fullName>User_Extension_ID__c</fullName>
    <label>User Extension ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>