unpackaged/main/default/objects/User/fields/User_Role_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Effective_Date__c</fullName>
    <label>Start Date (Current Role)</label>
    <type>Date</type>
</CustomField>