unpackaged/main/default/objects/User/fields/User_Role_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Role_Short_Name__c</fullName>
    <label>User Role Short Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>