unpackaged/main/default/objects/User/validationRules/Inactive_use_flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_use_flow</fullName>
    <active>true</active>
    <errorConditionFormula>IsActive = FALSE &amp;&amp;
ISCHANGED(IsActive) &amp;&amp;
Num_of_Goals__c &gt; 0 &amp;&amp;
ISBLANK(End_Date__c)</errorConditionFormula>
    <errorMessage>Please use the Terminate User flow on the Salesforce home page to deactivate users with goals</errorMessage>
</ValidationRule>