unpackaged/main/default/objects/User/validationRules/Integration_User_Deactivation.validationRule-meta.xml
<ValidationRule>
    <fullName>Integration_User_Deactivation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(IsActive) &amp;&amp;
NOT(IsActive) &amp;&amp;
$User.Is_integration_user__c = TRUE</errorConditionFormula>
    <errorMessage>Integration user cannot mark a user as inactive</errorMessage>
</ValidationRule>