unpackaged/main/default/objects/User/validationRules/User_Must_have_role.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Must_have_role</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(UserRoleId) &amp;&amp; 
ISCHANGED(UserRoleId) &amp;&amp;
IsActive = TRUE &amp;&amp;
ISNEW() = FALSE</errorConditionFormula>
    <errorMessage>User must have role</errorMessage>
</ValidationRule>